Start building out the Artifact service. Enable preview features
Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>