@@ -50,6 +50,7 @@
                 <configuration>
                     <release>15</release>
                     <compilerArgs>
+                        <arg>--enable-preview</arg>
                         <arg>-parameters</arg>
                     </compilerArgs>
                 </configuration>
